// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Atom tests render Avatar correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

<div
    class="c0"
    data-testid="avatar"
    size="40"
  >
    <img
      alt="avatar"
      class="c1"
      src="https://avatars.dicebear.com/api/initials/user name.svg?size=40&fontSize=40"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar Atom tests should render Avatar with user name initials 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

<div
    class="c0"
    data-testid="avatar"
    size="40"
  >
    <img
      alt="user_avatar"
      class="c1"
      src="https://avatars.dicebear.com/api/initials/Flávio Amaral.svg?size=40&fontSize=40"
    />
  </div>
</DocumentFragment>
`;
